<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background">


    <ImageButton
        android:id="@+id/imageButton_ActivityAddMoodEvent_backbutton"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="87dp"
        android:background="@color/black_background"
        android:contentDescription="@string/back_button_add_mood"
        android:src="@drawable/ic_white_back_button"
        android:translationY="15dp"
        app:layout_constraintEnd_toStartOf="@+id/textview_ActivityAddMoodEvent_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_ActivityAddMoodEvent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="monospace"
        android:text="@string/mood_event"
        android:textColor="@color/mimi_pink"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageview_ActivityAddMoodEvent_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/mood_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/button_ActivityAddMoodEvent_selectPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_ActivityAddMoodEvent_title" />

    <Button
        android:id="@+id/button_ActivityAddMoodEvent_selectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_photo"
        android:textColor="@color/mimi_pink"
        android:backgroundTint="@color/primary_dark_grape"
        app:layout_constraintBottom_toTopOf="@id/textview_ActivityAddMoodEvent_selectimagetext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_ActivityAddMoodEvent_photo" />

    <TextView
        android:id="@+id/textview_ActivityAddMoodEvent_selectimagetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image_optional"
        android:textColor="@color/white"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ActivityAddMoodEvent_selectPhoto" />

    <TextView
        android:id="@+id/textView_ActivityAddMoodEvent_moodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/mood_add_mood"
        android:textColor="@color/mimi_pink"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_ActivityAddMoodEvent_selectimagetext" />

    <Spinner
        android:id="@+id/spinner_ActivityAddMoodEvent_currentMoodspinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#282727"
        android:backgroundTintMode="screen"
        android:entries="@array/moods"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ActivityAddMoodEvent_moodLabel" />

    <TextView
        android:id="@+id/textView_ActivityAddMoodEvent_triggerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/trigger_add_mood"
        android:textColor="@color/mimi_pink"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_ActivityAddMoodEvent_triggerInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_ActivityAddMoodEvent_currentMoodspinner" />

    <EditText
        android:id="@+id/editText_ActivityAddMoodEvent_triggerInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#282727"
        android:background="@color/text_box_background"
        android:hint="@string/trigger_add_mood_edittext"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_ActivityAddMoodEvent_currentMoodspinner" />

    <TextView
        android:id="@+id/textView_ActivityAddMoodEvent_socialSituationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/social_situation_add_mood"
        android:textColor="@color/mimi_pink"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_ActivityAddMoodEvent_socialsituation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_ActivityAddMoodEvent_triggerInput" />

    <Spinner
        android:id="@+id/spinner_ActivityAddMoodEvent_socialsituation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/social_situations"
        android:popupBackground="@color/black_background"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ActivityAddMoodEvent_socialSituationLabel" />


    <Switch
        android:id="@+id/switch_ActivityAddMoodEvent_geolocation"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/geolocation_optional_add_mood"
        android:textColor="@color/mimi_pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_ActivityAddMoodEvent_socialsituation" />

    <Switch
        android:id="@+id/switch_ActivityAddMoodEvent_privacy"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:text="@string/public_mood_entry_add_mood"
        android:textColor="@color/mimi_pink"
        app:layout_constraintBottom_toTopOf="@+id/button_ActivityAddMoodEvent_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/switch_ActivityAddMoodEvent_geolocation"
        app:layout_constraintTop_toBottomOf="@+id/spinner_ActivityAddMoodEvent_socialsituation"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_ActivityAddMoodEvent_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primary_dark_grape"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_ActivityAddMoodEvent_geolocation"
        app:layout_constraintVertical_bias="0.21" />


</androidx.constraintlayout.widget.ConstraintLayout>