...
    <string name="comment_text_example">Don\'t be afraid of failure. This is the way ot succeed.</string>
    <string-array name="moods">
        <item>Anger</item>
        <item>Confusion</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happiness</item>
        <item>Sadness</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
...
