<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@color/black_background"
    android:elevation="4dp"
    android:padding="12dp"
    android:radius="12dp">

    <EditText
        android:id="@+id/edittext_FragmentAddCommentsDialogFrag_editCommentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#434343"
        android:textColor="@color/mimi_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>