...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_ActivityViewComments_title" />

    <!-- This is a non-functional button that adjusts position of the title-->

    <ImageButton
        android:id="@+id/imagebutton_ActivityViewComments_addcommentsbutton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/select_image_for_mood_event_comments_imagebutton"
...
